# rsrpc

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: demo.rs  http_demo.rs  streaming.rs
