[workspace]
members = [
    "packages/lib",
    "packages/macro"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = "1"
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1.0.100"
async-trait = "0.1.89"

[package]
name = "rrpc-examples"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
http = ["rrpc/http", "dep:axum"]

[dependencies]
rrpc = { path = "packages/lib" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.7", optional = true }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "http_demo"
path = "examples/http_demo.rs"
required-features = ["http"]

