[workspace]
members = [
    "packages/lib",
    "packages/macro"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jkelleyrtp/rsrpc"
rust-version = "1.75"

[workspace.dependencies]
rsrpc = { version = "0.1.0", path = "packages/lib" }
rsrpc-macro = { version = "0.1.0", path = "packages/macro" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = "1"
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1.0.100"
async-trait = "0.1.89"

[package]
name = "rsrpc-examples"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
http = ["rsrpc/http", "dep:axum"]

[dependencies]
rsrpc.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
axum = { version = "0.7", optional = true }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "http_demo"
path = "examples/http_demo.rs"
required-features = ["http"]

